# electronics_network

./: pyproject.toml
config/: settings.py
