[tool.poetry]
name = "electronics-network"
version = "0.1.0"
description = ""
authors = ["nikolyai-tarasov <kolya.tarasov333@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
